[package]
name = "mb-er-anchor-counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mb_er_anchor_counter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version="0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
ephemeral-rollups-sdk = { version = "0.2.5", features = ["anchor"] }

